--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Motivational Post</title>
   <link rel="stylesheet" href="style.css">
-  
-</head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 <body>
-  <div>
-    <img src="./assets/images/jesus.jpeg" alt="Jesus in Manger">
+</head>
+  
+  <div  class="poster">
+    <img class="gift" src="./assets/images/jesus.jpeg" alt="Jesus in Manger">
     <h1>The gift of God</h1>
     <p>"And she will have a son, and you are to name him Jesus, for he will save his people from their sins" - Matthew 1:21</p>
   </div>
